changed stack name from nlu-search-1 to nlu-search

--- a/nlu-based-item-search.ipynb
+++ b/nlu-based-item-search.ipynb
@@ -80,7 +80,7 @@
     "    return outputs\n",
     "\n",
     "## Setup variables to use for the rest of the demo\n",
-    "cloudformation_stack_name = \"nlu-search-1\"\n",
+    "cloudformation_stack_name = \"nlu-search\"\n",
     "\n",
     "outputs = get_cfn_outputs(cloudformation_stack_name)\n",
     "\n",
