fixing bucket variable

--- a/nlu-based-item-search.ipynb
+++ b/nlu-based-item-search.ipynb
@@ -129,7 +129,7 @@
     "images_path = 'data/feidegger/fashion'\n",
     "filename = 'metadata.json'\n",
     "\n",
-    " = s3_resource.Bucket(bucket)\n",
+    "my_bucket = s3_resource.Bucket(bucket)\n",
     "\n",
     "if not os.path.isdir(images_path):\n",
     "    os.makedirs(images_path)\n",
