fixing notebook npm path issue

--- a/nlu-based-item-search.ipynb
+++ b/nlu-based-item-search.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,6 @@
    "source": [
     "#Defining defalut bucket for SageMaker pretrained model hosting\n",
     "sagemaker_session = sagemaker.Session()\n",
-    "\n",
     "role = sagemaker.get_execution_role()"
    ]
   },
@@ -600,7 +599,7 @@
     "for x in res['hits']['hits']:\n",
     "    key = x['_source']['image']\n",
     "    key = key.replace(f's3://{bucket}/','')\n",
-    "    img = display_image(bucket,key)"
+    "    img = display_image(bucket,key)\n"
    ]
   },
   {
@@ -772,6 +771,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add NPM to the path so we can assemble the web frontend from our notebook code\n",
+    "\n",
+    "from os import environ\n",
+    "\n",
+    "npm_path = ':/home/ec2-user/anaconda3/envs/JupyterSystemEnv/bin'\n",
+    "\n",
+    "if npm_path not in environ['PATH']:\n",
+    "    ADD_NPM_PATH = environ['PATH']\n",
+    "    ADD_NPM_PATH = ADD_NPM_PATH + npm_path\n",
+    "else:\n",
+    "    ADD_NPM_PATH = environ['PATH']\n",
+    "    \n",
+    "%set_env PATH=$ADD_NPM_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%cd ./frontend/\n",
     "\n",
     "!npm install"
@@ -887,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
