Fixing some markdown cell comments

--- a/nlu-based-item-search.ipynb
+++ b/nlu-based-item-search.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,8 +364,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "role = get_execution_role() \n",
-    "\n",
     "pytorch_model = PyTorchModel(model_data = inputs, \n",
     "                             role=role, \n",
     "                             entry_point ='inference.py',\n",
@@ -380,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "sentence transformer uses BERT pretrained model so it will generate 768 dimension for the given text. we will quickly validate the same in next cell."
+    "sentence transformers uses BERT pretrained model so it will generate 768 dimension for the given text. we will quickly validate the same in next cell."
    ]
   },
   {
@@ -510,7 +508,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# defining a function to import the feature vectors corrosponds to each S3 URI into Elasticsearch KNN index\n",
     "# This process will take around ~10 min.\n",
     "\n",
@@ -693,7 +690,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deploying a full-stack visual search application"
+    "## Deploying a full-stack NLU search application"
    ]
   },
   {
@@ -709,7 +706,7 @@
     "\n",
     "# Generate the CloudFormation Quick Create Link\n",
     "\n",
-    "print(\"Click the URL below to create the backend API for visual search:\\n\")\n",
+    "print(\"Click the URL below to create the backend API for NLU search:\\n\")\n",
     "print((\n",
     "    'https://console.aws.amazon.com/cloudformation/home?region=us-east-1#/stacks/create/review'\n",
     "    f'?templateURL={sam_template_url}'\n",
