added cosine similarity metric as part of ES7.7

--- a/nlu-based-item-search.ipynb
+++ b/nlu-based-item-search.ipynb
@@ -442,7 +442,7 @@
     "knn_index = {\n",
     "    \"settings\": {\n",
     "        \"index.knn\": True,\n",
-    "        \"index.knn.space_type\": \"cosinesimil,\"\n",
+    "        \"index.knn.space_type\": \"cosinesimil\",\n",
     "        \"analysis\": {\n",
     "          \"analyzer\": {\n",
     "            \"default\": {\n",
