minor change to comments

--- a/nlu-based-item-search.ipynb
+++ b/nlu-based-item-search.ipynb
@@ -487,8 +487,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Concating all the product description into a single scentence, \n",
-    "#so that we will have a one embeddings for each product\n",
+    "# For each product, we are concatenating all the \n",
+    "# product descriptions into a single sentence,\n",
+    "# so that we will have one embedding for each product\n",
     "\n",
     "def concat_desc(results):\n",
     "    obj = {\n",
