downgraded sagemaker sdk and added py_version arg

--- a/nlu-based-item-search.ipynb
+++ b/nlu-based-item-search.ipynb
@@ -45,7 +45,8 @@
     "#install necessary pkg to make connection with elasticsearch domain\n",
     "!pip install elasticsearch\n",
     "!pip install requests\n",
-    "!pip install requests-aws4auth"
+    "!pip install requests-aws4auth\n",
+    "!pip install \"sagemaker<2.0\" --force-reinstall"
    ]
   },
   {
@@ -367,7 +368,8 @@
     "pytorch_model = PyTorchModel(model_data = inputs, \n",
     "                             role=role, \n",
     "                             entry_point ='inference.py',\n",
-    "                             source_dir = './code', \n",
+    "                             source_dir = './code',\n",
+    "                             py_version = 'py3', \n",
     "                             framework_version = '1.5.1',\n",
     "                             predictor_cls=StringPredictor)\n",
     "\n",
