Improved notebook execution experience

--- a/nlu-based-item-search.ipynb
+++ b/nlu-based-item-search.ipynb
@@ -48,7 +48,7 @@
     "!pip install \"elasticsearch<7.14.0\"\n",
     "!pip install requests\n",
     "!pip install requests-aws4auth\n",
-    "!pip install sagemaker -U"
+    "!pip install \"sagemaker>=2.0.0<3.0.0\""
    ]
   },
   {
@@ -263,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we are using realtime traslation which will take around ~25 min. \n",
+    "# we are using realtime traslation which will take around ~35 min. \n",
     "workers = 1 * cpu_count()\n",
     "\n",
     "#downloading images to local disk\n",
@@ -309,7 +309,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install transformers"
+    "!pip install install transformers[torch]"
    ]
   },
   {
@@ -328,6 +328,7 @@
     "tokenizer = AutoTokenizer.from_pretrained(\"sentence-transformers/distilbert-base-nli-stsb-mean-tokens\")\n",
     "model = AutoModel.from_pretrained(\"sentence-transformers/distilbert-base-nli-stsb-mean-tokens\") \n",
     "\n",
+    "tokenizer.save_pretrained(saved_model_dir)\n",
     "model.save_pretrained(saved_model_dir)"
    ]
   },
@@ -348,16 +349,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp transformer/pytorch_model.bin model.pth\n",
-    "!cp transformer/config.json code/config.json\n",
-    "\n",
-    "#zip the model .gz format\n",
-    "import tarfile\n",
-    "export_dir = 'model.pth'\n",
-    "with tarfile.open('model.tar.gz', mode='w:gz') as archive:\n",
-    "    archive.add(export_dir, recursive=False)\n",
-    "    \n",
-    "!rm model.pth"
+    "#zip the model in tar.gz format\n",
+    "!cd transformer && tar czvf ../model.tar.gz *"
    ]
   },
   {
@@ -411,7 +404,7 @@
     "                             framework_version = '1.7.1',\n",
     "                             predictor_cls=StringPredictor)\n",
     "\n",
-    "predictor = pytorch_model.deploy(instance_type='ml.m5.large', \n",
+    "predictor = pytorch_model.deploy(instance_type='ml.g4dn.xlarge', \n",
     "                                 initial_instance_count=1, \n",
     "                                 endpoint_name = f'nlu-search-model-{int(time.time())}')\n"
    ]
@@ -521,9 +514,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If you need to load zalando-translated-data.json execute the following code\n",
-    "with open('zalando-translated-data.json') as json_file:\n",
-    "    results = json.load(json_file)"
+    "# If you need to load zalando-translated-data.json un-comment and execute the following code\n",
+    "# with open('zalando-translated-data.json') as json_file:\n",
+    "#     results = json.load(json_file)"
    ]
   },
   {
@@ -564,7 +557,7 @@
    "outputs": [],
    "source": [
     "# defining a function to import the feature vectors corrosponds to each S3 URI into Elasticsearch KNN index\n",
-    "# This process will take around ~25 min.\n",
+    "# This process will take around ~2 min.\n",
     "\n",
     "def es_import(concat_result):\n",
     "    vector = json.loads(predictor.predict(concat_result['descriptions']))\n",
@@ -574,7 +567,7 @@
     "                   \"description\": concat_result['descriptions']}\n",
     "            )\n",
     "        \n",
-    "workers = 8 * cpu_count()\n",
+    "workers = 4 * cpu_count()\n",
     "    \n",
     "process_map(es_import, concat_results, max_workers=workers)"
    ]
@@ -947,9 +940,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_pytorch_latest_p36",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "conda_pytorch_latest_p36"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
